--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
 											<p>Electrical and Computer Engineering Student</p>
 										</header>
 
-										<p>I am an Electrical and Computer Engineering student at the University of Calgary, and I am currently completing a 16 month co-op at TC Energy, an Oil and Gas midstream company based in Calgary, Canada. I will finish my co-op and begin the final year of my BSc in September 2022 and graduate in May 2023. Afterwards, I plan on pursuing an M.Sc. in ECE.</p>
+										<p>
+											I am an Electrical and Computer Engineering student at the University of Calgary, and I am currently completing a 16 month co-op at TC Energy, an Oil and Gas midstream company based in Calgary, Canada. I will finish my co-op and begin the final year of my B.Sc. in September 2022 and graduate in May 2023. Afterwards, I plan on pursuing an M.Sc. in ECE.
+										</p>
 
 										<p>
-											I am currently a research assistant in Dr. Benjamin Tan's research group, working on ways to detect hardware security weaknesses in earlier stages of RTL design. So far, this has involved building a background in security engineering, and hardware security and improving my skills in embedded systems, and digital design/verification.
+											I am currently a research assistant in Dr. Benjamin Tan's research group, working on ways to detect hardware security weaknesses earlier in the hardware design cycle. So far, this has involved building a background in security (confidentiality, integrity, availability, access control, threat modelling, speculative execution attacks (Meltdown/Spectre), side-channel attacks, etc.) and improving my skills and knowledge in embedded systems and digital design/verification (RISC-V unprivileged, privileged and debug specs., JTAG, SystemVerilog, Verilator, etc.).
 										</p>
 
 										<p>Please contact me if you have any questions, resource/project recommendations, or just want to connect/chat!</p>	
@@ -87,7 +89,7 @@
 										<article>
 											<span class="image fit"><img src="images/06_countdown_timer.gif" alt="" /></span>
 											<h3>Countdown Timer</h3>
-											<p>This is the first project I've completed using SystemVerilog, and the first FSM I've implemented using a HDL/on an FPGA. This project uses two pushbuttons and one switch as inputs - the switch is used as a reset, and the two pushbuttons are used as a start/stop and to increment the timer. The current value of the timer is displayed on four 7-segment displays, two for minutes (0-99) and two for seconds (0-59). When the end of the timer is reached, an array of LEDs blinks at a 1 Hz frequency and 50% duty cycle.</p>
+											<p>This is the first project I've completed using SystemVerilog, and the first FSM I've implemented using an HDL. This project uses two pushbuttons and one switch as inputs - the switch is used as a reset, and the two pushbuttons are used as a start/stop and to increment the timer. The current value of the timer is displayed on four 7-segment displays, two for minutes (0-99) and two for seconds (0-59). When the end of the timer is reached, an array of LEDs blinks at a 1 Hz frequency and 50% duty cycle.</p>
 											<ul class="actions">
 												<li><a href="https://github.com/joeya20/FPGA-countdown-timer" class="button" target="_blank">GitHub</a></li>
 											</ul>
