--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong>Joey</strong> Ah-kiow</a>
 									<ul class="icons">
-										<li><a href="https://www.github.com/joeya20" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
-										<li><a href="https://www.linkedin.com/in/joeyah-kiow" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
+										<!-- <li><a href="https://www.github.com/joeya20" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+										<li><a href="https://www.linkedin.com/in/joeyah-kiow" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li> -->
 									</ul>
 								</header>
 
@@ -60,6 +60,39 @@
 									</header>
 									<div class="posts">
 										<article>
+											<span class="image fit"><img src="images/IMG_3744.jpg" alt="" /></span>
+											<h3>RISC-V pipelined processor</h3>
+											<p>I am currently working on a pipelined five-stage, RV32I compliant RISC-V processor using SystemVerilog. My approach has been to first establish and build the datapath and control capable of running the instructions, dealing with hazards, exceptions and interrupts and then begin working on optimizations like implementing a branch predictor, specific adder algorithm, etc. Eventually I would also like to extend the instruction set so that it is RV32IM compliant, which will require a FPU unit.</p>
+											<ul class="actions">
+												<li><a href="https://github.com/joeya20/riscv_processor" class="button" target="_blank">GitHub</a></li>
+											</ul>
+										</article>
+										<article>
+											<span class="image fit"><img src="images/ariane_new.png" alt="" /></span>
+											<h3>IEEE International Symposium on Hardware Oriented Security and Trust (HOST) Security Challenge - SoC Track</h3>
+											<p>The competition provided an SoC that has possible security concerns and bugs. The task was to find as many of these possible bugs as possible and determine possible impact and mitigations. Through this competition, I became very familiar with an <a href="https://github.com/openhwgroup/cva6">open-source RISC-V based SoC</a> and the various RISC-V Specifications (unprivileged, privileged, debug). I also explored embedded system topics like JTAG. My debugging approach consisted mainly of manual code review of Verilog/SystemVerilog code and simulations by running C code that leveraged the RISC-V toolchain.</p>
+											<ul class="actions">
+												<li><a href="https://github.com/joeya20/riscv_processor" class="button" target="_blank">GitHub</a></li>
+											</ul>
+										</article>
+										<article>
+											<span class="image fit"><img src="images/06_countdown_timer.gif" alt="" /></span>
+											<h3>Countdown Timer</h3>
+											<p>This is the first project I've completed using SystemVerilog, and the first FSM I've implemented using an HDL. This project uses two pushbuttons and one switch as inputs - the switch is used as a reset, and the two pushbuttons are used as a start/stop and to increment the timer. The current value of the timer is displayed on four 7-segment displays, two for minutes (0-99) and two for seconds (0-59). When the end of the timer is reached, an array of LEDs blinks at a 1 Hz frequency and 50% duty cycle.</p>
+											<ul class="actions">
+												<li><a href="https://github.com/joeya20/FPGA-countdown-timer" class="button" target="_blank">GitHub</a></li>
+											</ul>
+										</article>
+										<article>
+											<span class="image fit"><img src="images/02_FPGA_proximity_buzzer.png" alt="" /></span>
+											<h3>Proximity-controlled System</h3>
+											<p>This FPGA project utilized an infared proximity sensor, two switches and two pushbuttons as inputs, and a buzzer, four 7-segment displays and an LED array as outputs. </p>
+											<p>An ADC was used to read the proximity sensor output and was converted to a distance value using a LUT obtained using experimental values and curve fitting. The value read from the sensor was also displayed on the 7-segment displays, as either a voltage or distance value, and used to control the frequency of the buzzer and the brightness of the LEDs using PWM.</p>
+											<ul class="actions">
+												<li><a href="https://github.com/joeya20/ENEL453/tree/main/ENEL%20453%20Lab%204" class="button" target="_blank">GitHub</a></li>
+											</ul>
+										</article>
+										<article>
 											<span class="image fit"><img src="images/01_PIC_multimeter.png" alt="" /></span>
 											<h3>PIC-based digital multimeter</h3>
 											<p>This project is a PIC16 based multimeter that can measure DC voltage and resistance. It reads an input voltage using an ADC and outputs a voltage/resistance value to a TeraTerm window using a UART module. The voltage it can read is constrained by the power rails(0-3.3V) and the upper limit of the resistance it can read was determined experimentally and is most likely due to a combination of low supply voltage and lack of precision. The system switches between three states: Idle, Voltmeter, and Ohmmeter, and was programmed to be as power efficient as possible through the use of interrupts and proper clock management.</p>
@@ -75,23 +108,6 @@
 											<p>The OLED and rotary encoder served as the device UI, displaying data and time, and switching between modes. The data readings were stored locally on the device using the SD card module and could connect to another device using Bluetooth to display the data using a web-based UI for meaningful data visualizations and trends. The Design Specification is available for more detailed information!</p>
 											<ul class="actions">
 												<li><a href="./REJOY_Design_Specification.pdf" class="button icon solid fa-download" download>Download Design Spec</a></li>
-											</ul>
-										</article>
-										<article>
-											<span class="image fit"><img src="images/02_FPGA_proximity_buzzer.png" alt="" /></span>
-											<h3>Proximity-controlled System</h3>
-											<p>This FPGA project utilized an infared proximity sensor, two switches and two pushbuttons as inputs, and a buzzer, four 7-segment displays and an LED array as outputs. </p>
-											<p>An ADC was used to read the proximity sensor output and was converted to a distance value using a LUT obtained using experimental values and curve fitting. The value read from the sensor was also displayed on the 7-segment displays, as either a voltage or distance value, and used to control the frequency of the buzzer and the brightness of the LEDs using PWM.</p>
-											<ul class="actions">
-												<li><a href="https://github.com/joeya20/ENEL453/tree/main/ENEL%20453%20Lab%204" class="button" target="_blank">GitHub</a></li>
-											</ul>
-										</article>
-										<article>
-											<span class="image fit"><img src="images/06_countdown_timer.gif" alt="" /></span>
-											<h3>Countdown Timer</h3>
-											<p>This is the first project I've completed using SystemVerilog, and the first FSM I've implemented using an HDL. This project uses two pushbuttons and one switch as inputs - the switch is used as a reset, and the two pushbuttons are used as a start/stop and to increment the timer. The current value of the timer is displayed on four 7-segment displays, two for minutes (0-99) and two for seconds (0-59). When the end of the timer is reached, an array of LEDs blinks at a 1 Hz frequency and 50% duty cycle.</p>
-											<ul class="actions">
-												<li><a href="https://github.com/joeya20/FPGA-countdown-timer" class="button" target="_blank">GitHub</a></li>
 											</ul>
 										</article>
 									</div>
@@ -122,6 +138,8 @@
 										<h2>Get in touch</h2>
 									</header>
 									<ul class="contact">
+										<li class="icon brands alt fa-github"><a href="https://www.github.com/joeya20" target="_blank">GitHub</a></li>
+										<li class="icon brands alt fa-linkedin-in"><a href="https://www.linkedin.com/in/joeyah-kiow"target="_blank">LinkedIn</a></li>
 										<li class="icon solid fa-envelope"><a href="mailto:joey.ahkiow@gmail.com">joey.ahkiow@gmail.com</a></li>
 										<li class="icon solid fa-phone">(403)-918-8778</li>
 										<li class="icon solid fa-home">Calgary, AB</li>
