--- a/index.html
+++ b/index.html
@@ -38,11 +38,10 @@
 										</header>
 
 										<p>
-											I am an Electrical and Computer Engineering student at the University of Calgary, and I am currently completing a 16 month co-op at TC Energy, an Oil and Gas midstream company based in Calgary, Canada. I will finish my co-op and begin the final year of my B.Sc. in September 2022 and graduate in May 2023. Afterwards, I plan on pursuing an M.Sc. in ECE.
-										</p>
+											I am an Electrical and Computer Engineering student at the University of Calgary, currently completing a 16 month co-op at TC Energy based in Calgary. I will finish my co-op and begin the fourth year of my B.Sc. in September 2022. I am very passionate about computer systems and digital design and actively looking for internship opportunities in that area.
 
 										<p>
-											I am currently a research assistant in Dr. Benjamin Tan's research group, working on ways to detect hardware security weaknesses earlier in the hardware design cycle. So far, this has involved building a background in security (confidentiality, integrity, availability, access control, threat modelling, speculative execution attacks (Meltdown/Spectre), side-channel attacks, etc.) and improving my skills and knowledge in embedded systems and digital design/verification (RISC-V unprivileged, privileged and debug specs., JTAG, SystemVerilog, Verilator, etc.).
+											I am currently a research assistant in Dr. Benjamin Tan's research group, working on ways to detect hardware security weaknesses earlier in the hardware design cycle. So far, this has involved building a background in security, improving my skills in digital design/verification as well as exploring literature on hardware security. I have explored security topics ranging from confidentiality, integrity and availability to hardware Information flow tracking and fuzzing and digital systems design components like JTAG, RISC-V ISA, AXI, etc. Part of my research activities has also involved participating in the IEEE HOST Security Challenge and HACK@DAC2022, two competitions where I was provided 2 state-of-the-art open source RISC-V SoCs and tasked with finding exploitable security bugs. 
 										</p>
 
 										<p>Please contact me if you have any questions, resource/project recommendations, or just want to connect/chat!</p>	
