--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 								</section>
 								
 							<footer id="footer">
-								<p class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+								<p class="copyright">&copy; Joey Ah-kiow. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 							</footer>
 						</div>
 						
