--- a/index.html
+++ b/index.html
@@ -38,18 +38,20 @@
 										</header>
 
 										<p>
-											I am an Electrical and Computer Engineering student at the University of Calgary, currently completing a 16 month co-op at TC Energy based in Calgary. I will finish my co-op and begin the fourth year of my B.Sc. in September 2022, after which I will be pursuing graduate studies. 
+											I am an Electrical and Computer Engineering student at the University of Calgary, currently completing a 16 month co-op at TC Energy based in Calgary. I will finish my co-op and begin the final year of my degree in September 2022.
 										</p>
 										<p>
-											I am currently a research assistant in Dr. Benjamin Tan's research group, working on ways to detect hardware security weaknesses earlier in the hardware design cycle. So far, this has involved building a background in security, improving my skills in digital design/verification as well as exploring literature on hardware security. I have explored security topics ranging from confidentiality, integrity and availability to hardware Information flow tracking and fuzzing and digital systems design components like JTAG, RISC-V ISA, AXI, etc. 
-										</p>
-										
+											I am currently a research assistant in Dr. Benjamin Tan's research group, working on ways to automatically detect security vulnerabilities in hardware designs. We are particularly interested in developing static HDL code scanners. This has involved building a background in security, improving my skills in digital design/verification as well as exploring hardware security literature. I have also spent some time reviewing open-source SoC designs like OpenPiton/CVA6 and other security-critical digital system components like JTAG, AES, HMAC, SHA2/3.
+										</p>										
 										<p>											
 											I have also begun working on another research project, collaborating with a PhD student from New York University, where we are investigating the security implications of High level synthesis tools and developing ways to automatically detect and repair security vulnerabilities introduced by these tools. Stay tuned for updates!
 										</p>
-										<p>Please contact me if you have any questions, resource/project recommendations, or just want to connect/chat!</p>	
+										<p>
+											I have become very interested in hardware security, a field that is still in its early stages and where there is so much work to be done, but that can have so much impact on our day-to-day lives. I hope to go into graduate studies after graduation and continue working on tools and methodologies for automatic vulnerability detection and mitigation.
+										</p>
+										<p>Please contact me if you want to connect!</p>	
 										<ul class="actions">
-											<li><a href="./Joey_Ah-kiow_Resume.pdf" class="button fit icon solid fa-download" download>Download my resume</a></li>
+											<li><a href="./Joey_Ah-kiow_CV.pdf" class="button fit icon solid fa-download" download>Download my academic CV</a></li>
 											<li><a href="./Joey_Ah-kiow_Transcript.pdf" class="button fit icon solid fa-download" download>Download my transcript</a></li>
 										</ul>
 									</div>
